# LiveRtmp

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alick/livertmp/: BaseApplication.kt  MainActivity.kt  RtmpServerAdapter.kt  ScreenShotActivity.kt
app/src/main/java/com/alick/livertmp/base/: BaseLiveActivity.kt
app/src/main/java/com/alick/livertmp/bean/: RtmpServer.kt
app/src/main/java/com/alick/livertmp/constant/: LiveConstant.kt
app/src/main/res/drawable/: frame.xml  server_selector.xml
app/src/main/res/layout/: activity_camera_live.xml  activity_main.xml  activity_screen_shot.xml  dialog_select.xml  item_server.xml  item_server_edit.xml  toast.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
commonLibrary/: build.gradle
commonLibrary/src/main/java/com/alick/commonlibrary/: BaseActivity.kt
gradle/wrapper/: gradle-wrapper.properties
rtmpLibrary/: build.gradle
rtmpLibrary/src/main/: AndroidManifest.xml
rtmpLibrary/src/main/cpp/: CMakeLists.txt  CxwLog.h  CxwYuv.cpp  CxwYuv.h  rtmplibrary.cpp  safe_queue.h
rtmpLibrary/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
rtmpLibrary/src/main/cpp/libx264/: CMakeLists.txt
rtmpLibrary/src/main/cpp/libx264/include/: x264_config.h
rtmpLibrary/src/main/java/com/alick/rtmplib/: RtmpManager.kt
rtmpLibrary/src/main/java/com/alick/yuvlib/: YuvUtils.kt
utilsLibrary/src/main/java/com/alick/utilslibrary/: FileUtils.java
(+11 files in other folders)
